# autoencode-tptp

./: .gitignore  README.md  data.py  embed.py  model.py  pyproject.toml  reconstruct.py  test_graph.py  train.py
tptp-graph/: .gitignore  Cargo.toml
tptp-graph/src/: lib.rs  main.rs
