[tool.poetry]
name = "autoencode-tptp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.1"
torch = "*"
tensorboard = "*"
torch-scatter = "*"
matplotlib = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
maturin = "*"
jedi = "0.17.2"
rope = "*"
pylint = "*"
mypy = "*"
pycodestyle = "*"
flake8 = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
